<resources>
    <string name="app_name">Money Log</string>
    <string name="creation_info">Information\'s will be used for login purpose further.</string>
    <string name="hint_user_name">Enter user name</string>
    <string name="hint_full_name">Enter full name</string>
    <string name="hint_mpin">Enter mpin</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="login_info">Enter your username and mpin to proceed further.</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="search">Search wallet</string>
    <string name="create_new_category">Create New Category</string>
    <string name="category_name">Category name</string>
    <string name="category_description_optional">Description (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="add_category">Add category</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_budget">Wallet Budget</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_amount">Expense amount</string>
    <string name="expense_date">Expense date</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="net_available_balance">Net Available Balance</string>
    <string name="available_balance">Available balance :</string>
    <string name="budget_allocated">Budget allocated</string>
    <string name="your_expenses">Your Expenses</string>
    <string name="amount_spend">Amount spent</string>
    <string name="amount_available">Amount available</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_wallet">Update Wallet</string>
    <string name="no_wallet_found">No wallet found for your searched query. Want to create one ?</string>
    <string name="save">Save</string>
    <string name="forgot_mpin">"Want to change MPIN ? "</string>
    <string name="change_mpin">Change MPIN</string>
</resources>