<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_alert"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_bold"
            android:text="Edit Expense"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etExpenseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_name"
            android:padding="15dp"
            android:textSize="17sp"
            android:drawableStart="@drawable/ic_expense_name"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_edittext"
            android:textColorHint="@color/color_primary_hint"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:drawableStart="@drawable/ic_rupee_new"
            android:drawablePadding="10dp"
            android:hint="@string/expense_amount"
            android:background="@drawable/bg_edittext"
            android:textColorHint="@color/color_primary_hint"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto" />

        <EditText
            android:id="@+id/etExpenseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_calender_new"
            android:drawablePadding="10dp"
            android:hint="@string/expense_date"
            android:background="@drawable/bg_edittext"
            android:textColorHint="@color/color_primary_hint"
            android:textColor="@color/white"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etExpenseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:drawableStart="@drawable/ic_description"
            android:drawablePadding="10dp"
            android:hint="@string/category_description_optional"
            android:background="@drawable/bg_edittext"
            android:textColorHint="@color/color_primary_hint"
            android:textColor="@color/white"
            android:inputType="textMultiLine"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto"
            android:lines="5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_primary_hint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="#EA6C6C"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary_hint"/>
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary_hint"/>
            <TextView
                android:id="@+id/btnUpdateExpense"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/update"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/color_primary_blue"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>