<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/bg_alert">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create New Wallet"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etMonthName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_name"
            android:padding="15dp"
            android:textSize="17sp"
            android:drawableStart="@drawable/ic_wallet_outlined"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_edittext"
            android:textColorHint="@color/color_primary_hint"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_rupee_new"
            android:drawablePadding="10dp"
            android:hint="@string/wallet_budget"
            android:background="@drawable/bg_edittext"
            android:textColorHint="@color/color_primary_hint"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto"
            android:layout_marginVertical="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_primary_hint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_primary_hint"/>
            <TextView
                android:id="@+id/btnAddWallet"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/add_wallet"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/color_primary_blue"
                android:fontFamily="@font/roboto_bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>