<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    tools:context=".ui.WalletActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/layout_topbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_edittext"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layWalletInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.03"
                android:text="@string/budget_allocated"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInitialBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_rupee"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#5682C5"
                tools:text="20000.0"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layExpenseInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.03"
                android:text="@string/amount_spend"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpenseBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_rupee_spend"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#EA6C6C"
                tools:text="20000.0"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layBalanceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.03"
                android:text="@string/amount_available"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAvailableBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_rupee"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#5682C5"
                tools:text="20000.0"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_expenses"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.05"
        android:textColor="@color/color_primary_info"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgNothing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nothing"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExpenseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        tools:listitem="@layout/layout_item_expense"
        app:layout_constraintStart_toStartOf="parent"/>

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/btnAddExpense"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        app:cardCornerRadius="50dp"-->
<!--        app:cardElevation="20dp">-->
<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:src="@drawable/ic_add"-->
<!--            android:layout_margin="10dp"/>-->
<!--    </androidx.cardview.widget.CardView>-->

</LinearLayout>